--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -7,10 +7,12 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
     }
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'com.jfrog.bintray'
 apply plugin: 'maven-publish'
 
 group 'io.karte.android'
@@ -42,7 +44,7 @@ dependencies {
 
 task sourceJar(type: Jar) {
     classifier = "sources"
-    from android.sourceSets.main.java.srcDirs
+    from sourceSets.main.java.srcDirs
 }
 
 def pomConfig = {
