--- a/visualtracking/build.gradle
+++ b/visualtracking/build.gradle
@@ -25,8 +25,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation project(path: ':core')
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    compileOnly 'androidx.core:core-ktx:1.2.0'
     //noinspection GradleCompatible
     compileOnly "com.android.support:design:22.0.0"
     testImplementation 'junit:junit:4.12'
