--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -29,6 +29,9 @@ sourceSets {
         }
     }
 }
+compileKotlin {
+    kotlinOptions.allWarningsAsErrors = true
+}
 
 dependencies {
     implementation gradleApi()
