--- a/build.gradle
+++ b/build.gradle
@@ -137,6 +137,34 @@ configure(subprojects.findAll { !it.name.startsWith("sample_") }) {
             }
         }
     }
+
+    apply plugin: "jacoco"
+
+    tasks.withType(Test) {
+        jacoco.includeNoLocationClasses = true
+    }
+
+    jacoco {
+        toolVersion = "0.8.5"
+    }
+
+    task jacocoTestReport(
+            type: JacocoReport,
+            dependsOn: "testDebugUnitTest",
+            group: "verification"
+    ) {
+        reports {
+            xml.enabled = true
+            html.enabled = true
+        }
+        getSourceDirectories().from = "${projectDir}/src/main/java"
+        getClassDirectories().from = files(
+                fileTree(dir: "${buildDir}/tmp/kotlin-classes/debug"),
+                fileTree(dir: "${buildDir}/intermediates/javac/debug/classes/"))
+
+        getExecutionData().from = "${buildDir}/jacoco/testDebugUnitTest.exec"
+    }
+
 }
 
 task clean(type: Delete) {
@@ -188,5 +216,23 @@ task generateDocs(type: Exec, group: 'documentation') {
     }
     doLast {
         println(standardOutput.toString())
+    }
+}
+
+apply plugin: "jacoco"
+
+jacoco {
+    toolVersion = "0.8.5"
+}
+
+task jacocoMerge(
+        type: JacocoMerge,
+        group: "verification",
+        dependsOn: ["core:jacocoTestReport", "inappmessaging:jacocoTestReport", "notifications:jacocoTestReport", "variables:jacocoTestReport", "visualtracking:jacocoTestReport"]
+) {
+    gradle.afterProject { project, _ ->
+        if (project.rootProject != project && project.plugins.hasPlugin('jacoco')) {
+            executionData "${project.buildDir}/jacoco/testDebugUnitTest.exec"
+        }
     }
 }
