--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,6 +22,7 @@ android {
     }
     lintOptions {
         warningsAsErrors true
+        lintConfig file('../lint.xml')
     }
     kotlinOptions.allWarningsAsErrors = true
 }
@@ -34,14 +35,12 @@ dependencies {
     compileOnly 'androidx.ads:ads-identifier:1.0.0-alpha04'
     compileOnly 'com.google.android.gms:play-services-ads-identifier:17.0.0'
     testImplementation 'junit:junit:4.13'
-    testImplementation 'androidx.test:core:1.2.0'
+    testImplementation 'androidx.test:core:1.3.0'
     testImplementation "com.google.truth:truth:1.0.1"
     testImplementation "io.mockk:mockk:1.10.0"
     testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.8.0'
     testImplementation 'com.google.android.gms:play-services-ads-identifier:17.0.0'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
 
 task testJar(type: Jar, dependsOn: "assembleDebugUnitTest") {
