--- a/notifications/build.gradle
+++ b/notifications/build.gradle
@@ -22,6 +22,7 @@ android {
     }
     lintOptions {
         warningsAsErrors true
+        lintConfig file('../lint.xml')
     }
     kotlinOptions.allWarningsAsErrors = true
 }
@@ -35,12 +36,10 @@ dependencies {
     implementation "com.google.firebase:firebase-messaging:20.1.2"
     implementation project(path: ':core')
     testImplementation 'junit:junit:4.13'
-    testImplementation 'androidx.test:core:1.2.0'
+    testImplementation 'androidx.test:core:1.3.0'
     testImplementation "com.google.truth:truth:1.0.1"
     testImplementation "io.mockk:mockk:1.10.0"
     testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.8.0'
     testImplementation project(path: ':core', configuration: 'testRuntime')
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
