--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,21 @@ jobs:
             ./gradlew jacocoMerge
             bash <(curl -s https://codecov.io/bash)
 
+  ui_test:
+    executor:
+      name: build
+    steps:
+      - checkout
+      - run:
+          name: Request Ui Test
+          command: |
+            if [ $EXEC_ENV = 'private' ]; then
+              curl -u ${CIRCLECI_KEY} \
+                    -d build_parameters[CIRCLE_JOB]=e2e-test \
+                    -d build_parameters[RELEASE_BRANCH]=${CIRCLE_BRANCH} \
+                    ${UI_TEST_ENDPOINT}
+            fi
+
   generate_docs:
     executor:
       name: build
@@ -102,6 +117,11 @@ workflows:
   build_and_deploy:
     jobs:
       - test
+      - ui_test:
+          filters:
+            branches:
+              only:
+                - develop
       - generate_docs:
           filters:
             branches:
