--- a/core/build.gradle
+++ b/core/build.gradle
@@ -25,6 +25,7 @@ android {
         lintConfig file('../lint.xml')
     }
     kotlinOptions.allWarningsAsErrors = true
+    testOptions.unitTests.includeAndroidResources = true
 }
 
 dependencies {
