--- a/inappmessaging/build.gradle
+++ b/inappmessaging/build.gradle
@@ -11,7 +11,7 @@ android {
         versionName version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     buildTypes {
