--- a/notifications/build.gradle
+++ b/notifications/build.gradle
@@ -31,11 +31,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //noinspection GradleDependency
-    implementation "com.google.firebase:firebase-core:17.2.3"
-    //noinspection GradleDependency
-    implementation "com.google.firebase:firebase-messaging:20.1.2"
+    implementation "com.google.firebase:firebase-messaging:17.6.0"
     implementation project(path: ':core')
     testImplementation 'junit:junit:4.13'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation "com.google.truth:truth:1.0.1"
     testImplementation "io.mockk:mockk:1.10.0"
