--- a/buildscripts/projectSonatype.gradle
+++ b/buildscripts/projectSonatype.gradle
@@ -1,9 +1,14 @@
 apply plugin: 'maven'
 apply plugin: 'signing'
 
+def getPropOrDefault(name, defaultValue = "") {
+    if (project.ext.has(name))
+        return project.ext.get(name)
+    return defaultValue
+}
+
 artifacts {
-    archives sourcesJar
-//    archives javadocJar, sourcesJar
+    archives javadocJar, sourcesJar
 }
 signing {
     sign configurations.archives
@@ -13,13 +18,15 @@ uploadArchives {
     repositories {
         mavenDeployer {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+            def username = getPropOrDefault("ossrhUsername")
+            def password = getPropOrDefault("ossrhPassword")
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
+                authentication(userName: username, password: password)
             }
 
             snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
+                authentication(userName: username, password: password)
             }
             project.makeDeployerPom(pom)
         }
