--- a/build.gradle
+++ b/build.gradle
@@ -7,23 +7,18 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:3.6.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.20"
 
         // for upload maven repo
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.22.0"
 
         // for apply karte plugin to example project
         classpath 'io.karte.android:karte-gradle-plugin'
     }
-}
-
-plugins {
-    id 'org.jetbrains.dokka' version '0.10.1'
-    id 'com.jfrog.bintray' version '1.8.5'
-    id 'maven-publish'
-    id 'io.codearte.nexus-staging' version '0.22.0'
 }
 
 allprojects {
@@ -32,20 +27,11 @@ allprojects {
         jcenter()
     }
 }
+
 configure(subprojects.findAll { !it.name.startsWith("sample_") }) {
     println "configure libraries: ${project.name}"
 
     apply from: '../buildscripts/projectDokka.gradle'
-    task dokkaJavadoc(type: org.jetbrains.dokka.gradle.DokkaTask) {
-        outputFormat = 'javadoc'
-        outputDirectory = "$buildDir/javadoc"
-    }
-
-    task javadocJar(type: Jar, dependsOn: dokkaJavadoc) {
-        classifier = 'javadoc'
-        from "$buildDir/javadoc"
-    }
-
     apply from: '../buildscripts/projectJacoco.gradle'
 
     apply from: '../buildscripts/projectMaven.gradle'
@@ -62,9 +48,5 @@ task clean(type: Delete) {
 apply from: 'buildscripts/ktlint.gradle'
 apply from: 'buildscripts/dokka.gradle'
 apply from: 'buildscripts/jacoco.gradle'
+apply from: 'buildscripts/sonatype.gradle'
 
-nexusStaging {
-    packageGroup ='io.karte.android'
-    username = ossrhUsername
-    password = ossrhPassword
-}
