--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ include ':sample_java', ':sample_kotlin'
 rootProject.name='Karte'
 includeBuild('gradle-plugin') {
     dependencySubstitution {
-        substitute module('io.karte.android:karte-gradle-plugin') with project(':')
+        substitute module('io.karte.android:local-gradle-plugin') with project(':')
     }
 }
 
