--- a/notifications/build.gradle
+++ b/notifications/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
+def fcmCompileVersion = "20.3.0"
+
 android {
     compileSdkVersion 29
 
@@ -25,14 +27,29 @@ android {
         lintConfig file('../lint.xml')
     }
     kotlinOptions.allWarningsAsErrors = true
+
+    libraryVariants.all { variant ->
+        variant.getRuntimeConfiguration().resolutionStrategy { strategy ->
+            strategy.eachDependency { details ->
+                if (details.requested.group == 'com.google.firebase'
+                        && details.requested.name == 'firebase-messaging') {
+                    // To skip compile-time dependency resolution checks
+                    details.useVersion fcmCompileVersion
+                }
+            }
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    //noinspection GradleDependency
-    implementation "com.google.firebase:firebase-messaging:17.6.0"
+    // for runtime dependencies
+    runtimeOnly "com.google.firebase:firebase-messaging:17.6.0"
+    // for compile dependencies
+    compileOnly "com.google.firebase:firebase-messaging:$fcmCompileVersion"
     implementation project(path: ':core')
+    testImplementation "com.google.firebase:firebase-messaging:$fcmCompileVersion"
     testImplementation 'junit:junit:4.13'
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
     testImplementation 'androidx.test:core:1.3.0'
