--- a/notifications/build.gradle
+++ b/notifications/build.gradle
@@ -11,6 +11,7 @@ android {
         //noinspection OldTargetApi
         targetSdkVersion 29
         versionName version
+        buildConfigField "String", "LIB_VERSION", "\"$version\""
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'proguard-rules.pro'
