add support for android 12 (#155)
* refactoring intent processing.
* add receive activity to apply notification trampoline limit upper android 12.
* add queries for resolveActivity upper android 11
* vup

--- a/notifications/src/main/AndroidManifest.xml
+++ b/notifications/src/main/AndroidManifest.xml
@@ -1,7 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.karte.android.notifications">
 
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="http" />
+        </intent>
+    </queries>
+
     <application>
         <receiver android:name="io.karte.android.notifications.MessageReceiver" />
+        <activity android:name=".MessageReceiveActivity" />
     </application>
 </manifest>
