--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -13,6 +13,10 @@ jobs:
   review:
     runs-on: ubuntu-latest
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+        with:
+          access_token: ${{ secrets.GH_ACCESS_TOKEN }}
       - uses: actions/checkout@v2
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
