--- a/.github/workflows/release-start.yml
+++ b/.github/workflows/release-start.yml
@@ -50,7 +50,7 @@ jobs:
         PULL_REQUEST_TITLE: Deploy to production by ${{ github.actor }}
         PULL_REQUEST_BODY: |
           ### 以下の項目を確認してください
-          - [ ] Podspecのバージョンが正しく更新されていること
+          - [ ] versionファイルのバージョンが正しく更新されていること
           - [ ] 配信されたサンプルアプリでの動作確認
           - [ ] CHANGELOG.md のリリース日付が正しく設定されていること
           - [ ] 全てのチェックボックスを埋めると自動的にマージ作業を開始します
