--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,7 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+# AGP 7.0未満だと必要
+android.jetifier.blacklist=bcprov
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
