--- a/inappmessaging/build.gradle
+++ b/inappmessaging/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 16
         //noinspection OldTargetApi
         targetSdkVersion 29
         versionName version
@@ -19,6 +19,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
         }
     }
     lintOptions {
@@ -36,11 +41,11 @@ dependencies {
     compileOnly 'androidx.appcompat:appcompat:1.2.0'
     //noinspection GradleDependency
     compileOnly 'androidx.core:core-ktx:1.2.0'
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation "com.google.truth:truth:1.0.1"
     testImplementation "io.mockk:mockk:1.10.0"
-    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "org.robolectric:robolectric:4.8"
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.8.0'
     testImplementation project(path: ':core', configuration: 'testRuntime')
 }
