--- a/variables/build.gradle
+++ b/variables/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 16
         //noinspection OldTargetApi
         targetSdkVersion 29
         versionName version
@@ -21,6 +21,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
     lintOptions {
         warningsAsErrors true
         lintConfig file('../lint.xml')
@@ -32,11 +37,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation project(path: ':core')
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation "com.google.truth:truth:1.0.1"
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'io.mockk:mockk:1.10.0'
-    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "org.robolectric:robolectric:4.8"
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.8.0'
     testImplementation project(path: ':core', configuration: 'testRuntime')
 }
